# magi-bot

./: .gitignore  Dockerfile  Taskfile.yaml  agent.py  config.py  defillama.yaml  docker-compose.yaml  prompt.md  pyproject.toml  telegram_bot.py
